Set image `max-width` to 100% to avoid overflow

--- a/in/index.scss
+++ b/in/index.scss
@@ -69,6 +69,11 @@ pre {
   border-radius:    4px;
 }
 
+article img {
+  max-width:     100%;
+  border-radius: 8px;
+}
+
 .title {
   font-variant: small-caps;
 }
